# dotfiles

./: .vimrc  README.md  dotinstall.py  packages  pyproject.toml
configs/: .vimrc  vim.message
configs/alacritty/: .alacritty.toml  .alacritty.yml
configs/cleartype/: .fonts.conf
configs/fish/.config/: fish_variables
configs/fish/.config/fish/: fish_title.fish  fish_variables
configs/git/: .gitconfig
configs/picom/.config/picom/: picom.conf
configs/tmux/: .tmux.conf
configs/vim/: .vimrc
configs/xfce4/.config/gtk-3.0/: gtk.css
configs/zim/.config/zim/: style.conf
