[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Custom dotfiles and configuration"
authors = ["kraptor <kraptor@kraptor.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
